Minor updates to help docs

--- a/templates/help/application-setup.twig
+++ b/templates/help/application-setup.twig
@@ -9,7 +9,7 @@
 {% block content %}
 
     <div class="nav--page">
-        <h1>Help - Application Setup</h1>
+        <h1>Help - Application Setup Guide</h1>
 
         <p class="nav--page__back">
             <a class="btn btn--small btn--back" href="{{ urlFor('help') }}">Back to Help</a>
@@ -131,7 +131,7 @@
     </p>
 
     <p>
-        Script context accessible from the <code>HAL_CONTEXT</code> environment variable and can be accessed from with your scripts or as a shell argument.
+        Script context is accessible from the <code>HAL_CONTEXT</code> environment variable and can be accessed from with your scripts or as a shell argument.
     </p>
 
     {{ block('script_example_context') }}
